# fetch_ros

arm_calibration/: CMakeLists.txt  package.xml
arm_calibration/config/: calibrate.yaml  calibration_poses.bag  capture.yaml
arm_calibration/launch/: calibrate.launch  capture.launch
arm_calibration/scripts/: calibrate_robot  camera_reconfigure.py
arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
arm_moveit_config/config/: controllers.yaml  joint_limits.yaml~  kinematics.yaml~  stand_alone_arm.srdf  stand_alone_arm.srdf~
arm_moveit_config/launch/: default_warehouse_db.launch  demo.launch  frames.gv  move_group.launch~  moveit.rviz  moveit.rviz~  planning_context.launch  planning_context.launch~  sensor_manager.launch.xml  stand_alone_arm_moveit_controller_manager.launch~  trajectory_execution.launch.xml
fetch_calibration/config/: .calibrate_with_ground.yaml.swp  .capture_with_ground.yaml.swp  calibrate.yaml  calibrate_finders.yaml  calibrate_with_ground.yaml  calibration_poses_fast.bag  calibration_poses_sampled.bag  calibration_poses_sampled_25_1.bag  calibration_poses_sampled_50.bag  calibration_poses_sampled_50_1.bag  calibration_poses_sampled_50_2.bag  capture.yaml  (+8 more)
freight_calibration/: CMakeLists.txt  capture.yaml  package.xml
freight_calibration/config/: .capture.yaml.swp  :q  calibrate.yaml  calibration_poses.bag  capture.yaml  feature.py  output_pmd.bag
freight_calibration/launch/: calibrate.launch  capture.launch  capture_manual.launch
freight_calibration/scripts/: calibrate_robot  calibrate_robot1  camera_reconfigure.py
(+19 files in other folders)
