<package>
  <name>freight_calibration</name>
  <version>0.0.0</version>
  <description>
    Launch and configuration files for calibrating Freight using the 'robot_calibration' package.
  </description>
  <maintainer email="narora@todo.todo">narora</maintainer>
  <license>Apache2</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>robot_calibration</run_depend>
</package>
